argo-apps/manifests/percona-service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9104"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/component: pxc
    app.kubernetes.io/instance: pxc-db
    app.kubernetes.io/managed-by: percona-xtradb-cluster-operator
    app.kubernetes.io/name: percona-xtradb-cluster
    app.kubernetes.io/part-of: percona-xtradb-cluster
  name: percona-pxc-db-pxc-metrics
  namespace: app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: metrics
    port: 9104
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: pxc-db
    app.kubernetes.io/name: percona-xtradb-cluster
  sessionAffinity: None
  type: ClusterIP
